# pickaxe

./: .editorconfig  .rubocop.yml  CODE_OF_CONDUCT.md  COPYING  Gemfile  README.md  Rakefile  application_window.rb  com.ismailarilik.Pickaxe.json  meson.build  pickaxe.gemspec
data/: com.ismailarilik.Pickaxe.desktop.in  com.ismailarilik.Pickaxe.gschema.xml  com.ismailarilik.Pickaxe.metainfo.xml.in  meson.build
data/icons/: meson.build
exe/: pickaxe
explorer/: file.rb  treeview.rb
lib/: pickaxe.rb
lib/pickaxe/: app.rb  version.rb
lib/pickaxe/widgets/: window.rb
po/: POTFILES  meson.build
sig/: pickaxe.rbs
sig/pickaxe/: app.rbs
sig/pickaxe/widgets/: window.rbs
spec/: pickaxe_spec.rb  spec_helper.rb
spec/pickaxe/: app_spec.rb
src/: main.py  menu.ui  meson.build  pickaxe.gresource.xml  pickaxe.in  window.py  window.ui
src/actions/: open_file.py  save.py  save_as.py
src/editor/: editor_view.py  editor_view.ui
src/gtk/: help-overlay.ui
test/test_actions/: test_save_action.py
